--- a/_data/offers.yml
+++ b/_data/offers.yml
@@ -213,7 +213,7 @@
 
 - title: San Gemini Palace
   id: san-gemini-palace
-  location: San Gemini, Umbría
+  location: Umbría (San Gemini, Italia)
   description: Una antigua casa de campo de cinco estrellas en el corazón de Italia, con desayuno y late check out
   price: 300
   price-description: por suite por noche
