bad data in offer description

--- a/_data/offers.yml
+++ b/_data/offers.yml
@@ -41,7 +41,7 @@
 - title: Palazzo Montemartini, A Radisson Collection Hotel
   id: palazzo-montemartini-a-radisson-collection-hotel
   location: Roma, Lazio
-  description: <span style=""font-size:13px;font-family:Arial;color:#000000;background-color:transparent;font-weight:normal;font-style:normal;font-variant:normal;text-decoration:none;vertical-align:baseline;"" id=""docs-internal-guid-4672f165-2503-1b0b-d2ce-96d74c7472af"">Un 5* dal design ultramoderno nel cuore di Roma</span>
+  description: Un 5* dal design ultramoderno nel cuore di Roma
   price: 205
   price-description: per camera per notte
   saved: 27
